--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,10 +9,10 @@ local:
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
  amazon:
    service: S3
-   access_key_id: AKIA3SRYRB3TTZ6VOOBK
-   secret_access_key: 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
+   access_key_id: <%= ENV['AWS_ACCESS_KEY'] %>
+   secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
    region: ap-northeast-1
-   bucket: blogapp1
+   bucket: <%= ENV['AWS_BUCKET_NAME'] %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
